--- a/Yelp/SwitchCell.xib
+++ b/Yelp/SwitchCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,26 +15,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9XX-zD-ESF">
-                        <rect key="frame" x="8" y="14" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sih-8q-F8y">
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sih-8q-F8y">
                         <rect key="frame" x="263" y="9" width="51" height="31"/>
                         <connections>
                             <action selector="switchValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="cIt-3J-S6p"/>
                         </connections>
                     </switch>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9XX-zD-ESF">
+                        <rect key="frame" x="16" y="14" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="9XX-zD-ESF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="36q-Zn-Lni"/>
-                    <constraint firstItem="9XX-zD-ESF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="9iq-FJ-Axu"/>
                     <constraint firstItem="9XX-zD-ESF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="BPK-ti-bdW"/>
-                    <constraint firstAttribute="trailing" secondItem="Sih-8q-F8y" secondAttribute="trailing" constant="8" id="HAt-IL-ybn"/>
-                    <constraint firstItem="9XX-zD-ESF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="fbd-oP-y6q"/>
-                    <constraint firstItem="Sih-8q-F8y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="mQC-GE-lgF"/>
+                    <constraint firstItem="9XX-zD-ESF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="GVj-ZW-bDe"/>
+                    <constraint firstItem="9XX-zD-ESF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="Z6F-ah-Yub"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
